src/app/main.less
.main {
    padding-top: 50px;
    pointer-events: none;
    overflow: hidden;
    .inner {
        pointer-events: all;
        z-index: 1;
        position: relative;
    }

    & section&__interval {
        padding-top: 0em;
        overflow: hidden;
        position: relative;
        img {
            width: 100%;
            position: relative;
        }
    }

    & section&__header {
        padding-top: 3em;
        // border-bottom: 5px solid black;
        hr {
            height: 1px;
            background-color: @blue-grey;
            margin-bottom: 2em;
        }
    }

    section {
        // padding-top: 10em;
        background-image: url('../assets/images/cream_dust.png');
        background-repeat: repeat;
    }
}
.socials {
    margin-bottom: 0;
    li a {
        font-size: 2em;
    }
}

// tile system
.tile {
    @tile-height: 500px;
    @tile-height-sm: 640px;
    @tile-padding: 90px;
    @tile-padding-sm: 30px;
    @tile-padding-xs: 15px;
    padding: @tile-padding - 15;
    min-height: @tile-height;
    // section.tiled
    section&d {
        padding-top: 0;
        padding-bottom: 0;
    }

    &--vertical-auto {
        padding-top: 0;
        padding-bottom: 0;
        .tile__vertical-holder {
            display: table;
            height: @tile-height;
            > * {
                display: table-cell;
                vertical-align: middle;
            }
        }
    }
    &--half {
        width: 50%;
        float: left;
    }
    &--photo {
        background-size: cover;
        background-repeat: no-repeat;
        // font-size: 3em;
        h1, h2, h3 {
            margin: 0;
            padding: 0;
            text-align: left;
            .bh-label {
                padding-left: 0;
                padding-right: 0;
            }
        }
    }
    // section.bh-orange &--colored {
    //     color: @white;
    // }
    &-row {
        .tile {
            // display: inline-block;
        }
        &:after {
            content: '';
            display: table;
            clear: both;
        }
    }

    @media screen and (max-width: @screen-sm) {
        padding: @tile-padding-sm;
    }

    @media screen and (max-width: @screen-sm-max) {
        // height: auto;
        &--half {
            float: none;
            width: 100%;
        }
    }

    @media screen and (max-width: @screen-xs) {
        padding: @tile-padding-xs;
    }
}

.vertical-middle-holder {
    display: table;
    height: 100%;
    > * {
        display: table-cell;
        vertical-align: middle;
    }
}

.category {
    h3 {
        font-weight: bold;
    }

    ul {
        li {
            line-height: 2em;
            span {
                line-height: 1.4em;
                display: inline-block;
            }
        }
    }
}

svg.pictogram {
    fill: #333;
}

.definition {
    display: block;
    border-left: 7px solid @light-grey;
    padding-left: 1em;
    color: @blue-grey;
}

.palette {
    li {
        border-radius: 5px;
    }
}

[ng-click] {
    .small-underline:after {
        transition: width .5s ease;
    }

    &:hover, &:focus, &:active   {
        border: none;
        .small-underline:after {
            width: 100%;
        }
    }
}

@media screen and (max-width: @screen-sm) {
    .main {
        &__header {
            padding-top: 6em;
            h1 {
                font-size: 6em;
            }
        }
    }
}

